menu fix overflow mobile menu li

--- a/src/css/imports/_menu.css
+++ b/src/css/imports/_menu.css
@@ -1,23 +1,4 @@
 .menu-container{
-  @media (--viewport-medium){
-    display: flex;
-    flex-grow: 1;
-    justify-content:flex-end;
-    align-items: flex-end;
-  }
-  & ul {
-    padding: 0;
-    margin: 0;
-  }
-  & li{
-    @media (--viewport-medium){
-      display: inline-block;
-      margin-left: calc(var(--unit)/var(--m2));
-    } 
-  }
-}
-
-.menu-container{
   visibility:hidden;
   position: fixed;
   top:0;
@@ -32,7 +13,6 @@
   z-index: 100;
 
   @media (--viewport-medium){
-    display: block;
     visibility: visible;
     position: relative;
     transform:translateY(0);
@@ -40,25 +20,23 @@
     height: auto;
     transition:none;
     background-color: transparent;
-    left:0;
-    display: flex;
     flex-grow: 1;
     justify-content:flex-end;
     align-items: flex-end;
   }
 
-  & ul{
+  & ul {
     display: flex;
     flex-direction: column;
-    margin: auto  0 ;
+    margin: auto  0;
     padding: 0;
     width:100%;
+    list-style:none;
 
     @media (--viewport-medium){
-      display:flex;
-      margin:auto 0 0 0;
+      transform: translateY(-6px);
       flex-direction:row;
-      padding: 0;
+      margin:auto 0 0 0;
       justify-content:space-between;
       width:auto;
     }
@@ -67,38 +45,50 @@
     position: relative;
     display: inline-block;
     margin: calc(var(--m)/4)em 0 0 0;
-    /* padding-left:calc(var(--margin-small)); */
+    
     font-size: calc(var(--unit)*1.44*1.44);
-    overflow-y: hidden;
+    padding: 0;
+    overflow: hidden;
+
     &:nth-child(2n) a{transition-delay:.32s;}
     &:nth-child(3n) a{transition-delay:.39s;}
     &:nth-child(4n) a{transition-delay:.46s;}
     &:nth-child(5n) a{transition-delay:.53s;}
-    /* &:nth-child(6n) a{transition-delay:.60s;}
-    &:nth-child(7n) a{transition-delay:.67s;} */
+    &:nth-child(6n) a{transition-delay:.60s;}
+    /* &:nth-child(7n) a{transition-delay:.67s;} */
 
     @media (--viewport-medium){
       font-size:17px;
-      overflow-y: visible;
+      overflow: visible;
       margin: 0 0 0 var(--unit);
       padding: 0;
+      &:nth-child(2n) a{transition-delay:0s;}
+      &:nth-child(3n) a{transition-delay:0s;}
+      &:nth-child(4n) a{transition-delay:0s;}
+      &:nth-child(5n) a{transition-delay:0s;}
+      &:nth-child(6n) a{transition-delay:0s;}
     }
   }
+  
   & a {
+    position: relative;
     font-weight: 300;
     text-transform: uppercase;
     display: block;
     line-height: 1;
-    transform: translateY(var(--unit));
+    transform: translateY(calc(var(--unit)+5px));
     color:var(--white);
-    visibility:hidden;
+    /* visibility:hidden; */
     transition: all .15s cubic-bezier(0, 0, 0.46, 1.11) .35s;
+    
     padding: 5px 0 0 20px;
+    
     &:hover{
       @media (--viewport-medium){
         color: var(--dark-blue);
       }
     }
+
     &.is-active{
       @media (--viewport-medium){
         color: var(--dark-blue);
@@ -106,39 +96,39 @@
       }
 
       &::before{
-      
-      content:"";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width:100%;
-      height: 100%;
-      background-color: color(var(--white) alpha(20%));
-      transform:translateX(100%);
-      transition: all .75s cubic-bezier(0.65, 0.46, 0.62, 0.91) .4s;
-      
-
-      @media (--viewport-medium){
+        content:"";
+        position: absolute;
+        top: 0;
+        right: 0;
         width:100%;
-        height: .069em;
-        background-color: color(var(--dark-blue) alpha(90%));
-        left: 50%;
-        bottom:0;
-        transform:translate(-50%, 24px );
+        height: 100%;
+        background-color: color(var(--white) alpha(20%));
         
+        transform:translateX(100%);
+        transition: transform .6s cubic-bezier(0.56, 0.89, 0.63, 0.99) .45s;
+
+
+        @media (--viewport-medium){
+          width:100%;
+          height: .069em;
+          background-color: color(var(--dark-blue) alpha(90%));
+          left: 50%;
+          bottom:0;
+          transform:translate(-50%, 24px );
+          visibility: visible;
+          transition:none;
+        }
       }
-    }
     }
 
     @media (--viewport-medium){
       padding: 0;
       font-weight:500;
-      visibility: visible; 
-      transform: translateY(-5px);
-      text-transform: uppercase;
+      transform: translateY(var(--unit));
+      transform: translateY(0);
       color: color(var(--color-link) lightness(-4%));
       letter-spacing: -.01em;
-      transition: all .2s linear 0s;
+      transition: color .2s linear 0s;
     }
   }
   &.is-open{
@@ -150,13 +140,13 @@
     transform:translateY(0);
     & a{
       transform: translateY(0);
-      visibility: visible;
       color: color(var(--dark) lightness(88%));
       &.is-active{
+        
         color: color(var(--dark) lightness(88%));
         &::before{
-        transform:translateX(0);
-      }
+          transform:translateX(0);
+        }
       }
     }
   }
